fix: broken TopBar ui on small screen

--- a/src/components/Bars/TopBar/styles.module.scss
+++ b/src/components/Bars/TopBar/styles.module.scss
@@ -1,45 +1,95 @@
 @import "../../../utils/styles/colors";
 @import "../../../utils/styles/variables";
 
-.githubLogo {
-  width: 20px;
-  height: 15px;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+%anchor {
+  font-size: 1.3rem;
+  color: var(--text-color);
+  text-decoration: none;
+  padding: 0.4em 0.8em;
 
   &:hover {
-    path {
-      fill: $primaryLight;
-    }
-  }
-
-  @media screen and (min-width: $mobile-width) {
-    width: 50px;
-    height: 40px;
+    color: $primaryLight;
   }
 }
 
-// dropdown menu for player
-.playerDropDown {
+.shufflerLogo {
+  margin-left: 10px;
+
+  svg {
+    width: 120px;
+    height: 45px;
+    fill: var(--text-color);
+  }
+
+  @media screen and (min-width: $mobile-width) {
+    margin-left: 0px;
+
+    svg {
+      width: 200px;
+    }
+  }
+}
+
+.navOverlay {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(var(--bg-color-rgb), 0.9);
+  top: 50%;
+  transform: translateY(-50%);
+
+  .closeBtn {
+    position: absolute;
+    left: 10%;
+    top: 10%;
+  }
+}
+
+.navItems {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  margin: 0px 0px;
+  padding-left: 0px;
+
+  > li > a {
+    @extend %anchor;
+  }
+
+  @media screen and (max-width: $large-display-width) {
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+
+    & li {
+      margin-top: 3rem;
+    }
+  }
+}
+
+.dropdown {
+  @extend %anchor;
   position: relative;
   display: flex;
   align-items: center;
   cursor: pointer;
 
   &:hover {
-    .playerDropDownItem {
+    .dropdownItem {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
     }
   }
 
-  .playerDropDownItem {
+  .dropdownItem {
     display: none;
     position: absolute;
     top: 100%;
     left: 20%;
+    z-index: 1;
     font-size: 18px;
     background-color: var(--bg-color);
     min-width: 150px;
@@ -58,68 +108,22 @@
   }
 }
 
-// TopBar settings for dark theme
 .nav {
   user-select: none;
   box-shadow: $blackBoxShadowBottom;
 
-  nav {
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 8px 0;
-    z-index: 2;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 8px 0;
+  z-index: 2;
+}
 
-    .logo {
-      width: 120px;
-      height: 45px;
-      margin-left: 10px;
-      fill: var(--text-color);
+.alwaysShownNavItems {
+  margin-right: 0.5rem;
 
-      @media screen and (min-width: $mobile-width) {
-        width: 200px;
-        margin-left: 0px;
-      }
-    }
-
-    .githubLogo {
-      path {
-        fill: var(--text-color);
-      }
-
-      &:hover {
-        path {
-          fill: $primaryLight;
-        }
-      }
-    }
-
-    .navItems {
-      list-style-type: none;
-      display: flex;
-      align-items: center;
-      margin: 0px 0px;
-      padding-left: 0px;
-    }
-
-    .navItems > li > a,
-    // include dropdown div as well
-    .playerDropDown {
-      font-size: 1.3rem;
-      color: var(--text-color);
-      text-decoration: none;
-      padding: 0.4em 0.8em;
-
-      &:hover {
-        color: $primaryLight;
-      }
-    }
-  }
-
-  .curActivePg {
-    color: $primaryLight !important;
-    border-bottom: 2px solid $primaryLight;
+  @media screen and (min-width: $mobile-width) {
+    margin-right: 1rem;
   }
 }
